[tool.poetry]
name = "ThreadDownloader"
version = "1.0.0"
description = ""
authors = ["Little Piggeon <xiezichen2023@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
termcolor = "^2.4.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
